avatar-service/k8/k8.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: avatar
  labels:
    app: avatar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: avatar
  template:
    metadata:
      labels:
        app: avatar
    spec:
      containers:
      - name: avatar
        image: registry.cloud.sdu.dk/sdu-cloud/avatar-service:1.3.2
        livenessProbe:
          httpGet:
            port: 8080
            path: /status
          initialDelaySeconds: 3
          periodSeconds: 30
          failureThreshold: 5
        command:
        - /opt/service/bin/service
        - --config-dir
        - /etc/refresh-token
        - --config-dir
        - /etc/token-validation
        - --config-dir
        - /etc/psql
        volumeMounts:
        - mountPath: /etc/refresh-token
          name: refresh-token
        - mountPath: /etc/token-validation
          name: token-validation
        - mountPath: /etc/psql
          name: avatar-psql
      volumes:
      - name: refresh-token
        secret:
          optional: false
          secretName: avatar-refresh-token
      - name: token-validation
        configMap:
          name: token-validation
      - name: avatar-psql
        secret:
          optional: false
          secretName: avatar-psql

      imagePullSecrets:
        - name: esci-docker
