avatar-service/k8/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: avatar
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind: Mapping
      name: avatar
      prefix: /api/avatar/
      service: avatar:8080

spec:
  clusterIP: None
  type: ClusterIP
  selector:
    app: avatar
